# openergo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  interactionsource.cpp  interactionsource.h  interactionsource_unix.cpp  interactionsource_win32.cpp  main.cpp  openergo.pro  result  rustfmt.nightly.toml  rustfmt.toml  tracker.cpp  tracker.h  xcb_xinput_raw.h
.cargo/: config.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml  config.schema.json
crates/client/src/: activity.rs  assets.rs  click.rs  client.rs  config.rs  lib.rs  main.rs  persistence.rs  server.rs  sound.rs  telemetry.rs  watch_mux.rs
crates/client/src/app/: config.rs  graph_driver.rs  instantiate.rs  mod.rs
crates/client/src/app/modules/: config.rs  credit.rs  endpoints.rs  ipc_server.rs  mod.rs  pain.rs  pain_check.rs  pain_integration.rs  persistence.rs  server_link.rs  telemetry.rs  transports.rs  usage.rs  utilization_integration.rs
crates/client/src/credit/: limit.rs  mod.rs  utilization.rs
crates/client/src/credit/calculator/: config.rs  mod.rs
crates/client/src/fdr/: builder.rs  feeders.rs  mod.rs  record.rs  schema.generated.rs  schema.rs  writer.rs
crates/client/src/integration/: analog.rs  binder.rs  endpoints.rs  mod.rs
crates/client/src/notifications/: mod.rs  notify.rs
crates/client/src/pain/: check.rs  mod.rs  state.rs
crates/client/src/telemetry/: instruments.rs  mod.rs  writer.rs
crates/client/src/transports/: midi.rs
crates/client/src/transports/midi/: client.rs  driver.rs  mod.rs  seq_io.rs  tests.rs
crates/client/src/usage/: all.rs  breaks.rs  daily.rs  mod.rs  rest.rs
crates/server/: Cargo.toml  config.schema.json
crates/server/src/: config.rs  instantiate.rs  lib.rs  listener.rs  main.rs  server.rs  usage.rs
crates/server/src/device_events/: discovery.rs  event_source.rs  label.rs  mod.rs
crates/server/src/dwell_click/: event_sink.rs  mod.rs
crates/server/src/usage/: key_hand.rs  mod.rs  tests.rs
crates/shared/: Cargo.toml
crates/shared/src/: codec.rs  label.rs  lib.rs  model.rs  protocol.rs  spawn.rs  time.rs  tracing_fmt.rs
crates/shared/src/protocol/: client.rs  mod.rs  server.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: config_schema.rs  fdr.rs  main.rs  reference.template.md
docs/: config-reference.md  manual-install.md
integrations/grafana/: README.md  summary.json
integrations/grid/: min.sh  system-setup.lua  system-setup.min.lua
integrations/polybar/: README.md  openergo.py
nix/: module.nix
packaging/debian/: license  openergo-client.service  openergo.service  postinst
packaging/linux/: 70-openergo-uinput.rules  openergo-client.service.in  openergo.service.in  openergo.socket  openergo.toml
resources/: resources.qrc
scripts/: build-deb.sh  install-linux.sh
server/: sample-config.toml
server/src/: main.rs  usage.rs
server/src/device_events/: mod.rs
shared/src/: codec.rs  lib.rs  model.rs  protocol.rs  time.rs
