[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.0"
license = "GPL-3.0-only"

[workspace.metadata.crane]
name = "openergo"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# [patch.crates-io]
# winit = { git = "https://github.com/wpbrown/winit", branch = "v0_30_12_clear_exit" }
