[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.3.2"
license = "GPL-3.0-only"

[workspace.metadata.crane]
name = "openergo"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unsafe_derive_deserialize = "deny"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
