[package]
name = "openergo-cli"
version.workspace = true
edition = "2024"
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "openergo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
futures = "0.3"
jiff = "0.2"
rootcause = "0.12"
shared = { path = "../shared" }
tokio = { version = "1", features = ["net", "rt", "signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
