[package]
name = "openergo-server"
version.workspace = true
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
bachelor = { version = "0.1.1", features = ["stream", "sink"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
evdev = { version = "0.13", features = ["tokio", "stream-trait"] }
futures = "0.3"
jiff = "0.2"
libc = "0.2"
libsystemd = "0.7"
postcard = { version = "1", features = ["alloc", "use-std"] }
rootcause = "0.12"
schemars = { version = "1", features = ["derive"] }
shared = { path = "../shared", features = ["systemd"] }
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1", features = ["const_generics"] }
tokio = { version = "1.52.3", features = ["rt", "net", "time"] }
toml = "0.8"
tokio-util = { version = "0.7", features = ["codec"] }
uzers = "0.12"
udev = "0.9.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt", "test-util", "time"] }

[features]
tokio-console = ["shared/tokio-console"]
