[package]
name = "shared"
version.workspace = true
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
bachelor = { version = "0.1.1", features = ["stream", "sink"] }
bytes = "1"
futures = "0.3"
postcard = { version = "1", features = ["alloc", "use-std"] }
serde = { version = "1", features = ["derive"] }
slab = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1", features = ["net", "io-util", "rt", "signal"] }
rootcause = "0.12"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter", "fmt", "registry"] }
console-subscriber = { version = "0.5", optional = true }
tracing-journald = { version = "0.3", optional = true }
libsystemd = { version = "0.7", optional = true }
nix = { version = "0.30.1", features = ["time"] }
jiff = { version = "0.2.17", features = ["serde"] }
serde_with = "3.16.1"
lasso = "0.7"
smallvec = { version = "1", features = ["const_generics"] }

[features]
tokio-console = ["tokio/tracing", "dep:console-subscriber"]
systemd = ["dep:tracing-journald", "dep:libsystemd"]
