[package]
name = "xtask"
version.workspace = true
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
jsonschema-schema = "0.2"
openergo-server = { path = "../server" }
proc-macro2 = "1"
quote = "1"
schemars = "1"
serde_json = "1"
syn = { version = "2", features = ["full"] }
