[package]
name = "xtask"
version.workspace = true
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
directories = "6"
jsonschema-schema = "0.2"
proc-macro2 = "1"
quote = "1"
rootcause = "0.12"
schemars = { version = "1", features = ["derive", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
toml = "0.8"
tracing = "0.1"
